cli/tests/snapshots/integration__run_images@add_line1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="40.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 40.5 20.5 A 20.0 20.0 0.0 0 1 0.5 20.5 A 20.0 20.0 0.0 0 1 40.5 20.5 Z" fill="none" stroke="rgba(128, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
    <path d="M 0.5 40.5 L 40.5 0.5" fill="none" stroke="rgba(128, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
  </g>
</svg>
