cli/tests/snapshots/integration__run_images@add_line2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="60.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 10.0 10.0 L 50.0 10.0 L 50.0 50.0 L 10.0 50.0 Z" fill="rgba(128, 128, 128, 1.0)" />
    <path d="M 0.5 60.5 L 60.5 0.5" fill="none" stroke="rgba(128, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
  </g>
</svg>
