cli/tests/snapshots/integration__run_images@add_line3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="100.0" height="100.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 100.0 0.0 L 100.0 100.0 L 0.0 100.0 Z" fill="rgba(85, 107, 47, 1.0)" />
    <path d="M 25.0 25.0 L 75.0 75.0" fill="none" stroke="rgba(218, 165, 32, 1.0)" stroke-width="30.0" stroke-linejoin="round" stroke-linecap="round" />
  </g>
</svg>
