cli/tests/snapshots/integration__run_images@add_solid_curve1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="100.0" height="100.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.5 0.5 L 100.5 0.5 L 100.5 100.5 L 0.5 100.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
    <path d="M 20.0 20.0 C 48.255987 20.0 51.744013 80.0 80.0 80.0 Z" fill="rgba(255, 0, 0, 1.0)" />
  </g>
</svg>
